[package]
name = "tts_openai_rust"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
tiktoken-rs = "0.5"
clap = { version = "4.4", features = ["derive"] }
anyhow = "1.0"
futures = "0.3"
indicatif = "0.17"